--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Dec 20 00:44:05 IST 2016
+#Mon Dec 26 15:33:52 IST 2016
+systemProp.https.proxyPort=8080
 systemProp.http.proxyHost=proxy.iiit.ac.in
-systemProp.http.nonProxyHosts=localhost;127.0.0.1;172.16.*.*.;172.17.*.*;192.168.*.*;*iiit.ac.in;*iiit.net;10.*
 org.gradle.jvmargs=-Xmx1536m
+systemProp.https.proxyHost=proxy.iiit.ac.in
 systemProp.http.proxyPort=8080
-
-#android.useDeprecatedNdk=true;
