--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     defaultConfig {
-        applicationId "com.example.home.BequestProto"
-        minSdkVersion 10
-        targetSdkVersion 24
+        applicationId "in.ac.iiit.cvit.bequest"
+        minSdkVersion 21
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -50,9 +50,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile "com.android.support:support-v13:25.3.1"
     testCompile 'junit:junit:4.12'
     compile project(':openCVLibrary2411')
     compile files('libs/commons-compress-1.12.jar')
+    compile files('libs/metadata-extractor-2.9.1.jar')
+    compile files('libs/xmpcore-5.1.2.jar')
 //    compile files('libs/*.so')
+    compile "com.android.support:exifinterface:25.3.1"
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
