--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.home.BequestProto">
+    package="in.ac.iiit.cvit.bequest">
 
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -8,7 +8,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +22,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.home.BequestProto.MainActivity">
+        <activity android:name="in.ac.iiit.cvit.bequest.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,15 +30,17 @@
 
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CameraActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="landscape">
 
-        <activity android:name="com.example.home.BequestProto.CameraActivity"
-
-            android:screenOrientation="portrait" >
         </activity>
 
-        <activity android:name="com.example.home.BequestProto.AnnotationActivity"
+        <activity
+            android:name="in.ac.iiit.cvit.bequest.AnnotationActivity"
 
-            android:screenOrientation="portrait" >
+            android:screenOrientation="landscape">
         </activity>
 
         <uses-library android:required="false" android:name="com.sec.android.app.multiwindow"> </uses-library>
