--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,14 +50,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile "com.android.support:support-v13:25.3.1"
-    testCompile 'junit:junit:4.12'
     compile project(':openCVLibrary2411')
     compile files('libs/commons-compress-1.12.jar')
     compile files('libs/metadata-extractor-2.9.1.jar')
     compile files('libs/xmpcore-5.1.2.jar')
 //    compile files('libs/*.so')
-    compile "com.android.support:exifinterface:25.3.1"
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:exifinterface:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    testCompile 'junit:junit:4.12'
 }
