--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,12 +4,12 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
-include_directories(C:/OpenCV-android-sdk/sdk/native/jni/include)
+include_directories(/home/vamsidhar/OpenCV-android-sdk/sdk/native/jni/include)
 add_library( lib_opencv SHARED IMPORTED )
 set_target_properties(lib_opencv PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/src/main/jniLibs/${ANDROID_ABI}/libopencv_java.so)
 
 
-include_directories(C:/OpenCV-android-sdk/sdk/native/jni/include/opencv2/nonfree)
+include_directories(/home/vamsidhar/OpenCV-android-sdk/sdk/native/jni/include/opencv2/nonfree)
 add_library( lib_nonfree SHARED IMPORTED )
 set_target_properties(lib_nonfree PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/src/main/jniLibs/${ANDROID_ABI}/libnonfree.so)
 
