--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Dec 30 11:56:19 IST 2016
-systemProp.http.proxyHost=proxy.iiit.ac.in
+#Thu Aug 03 17:33:45 IST 2017
 systemProp.https.proxyPort=8080
-systemProp.http.nonProxyHosts=localhost;127.0.0.1;172.16.*.*.;172.17.*.*;192.168.*.*;*iiit.ac.in;*iiit.net;10.*
+systemProp.http.proxyHost=proxy.iiit.ac.in
+systemProp.http.nonProxyHosts=localhost, 127.0.0.1, iiit.ac.in, .iiit.ac.in, iiit.net, .iiit.net, 172.16.0.0/12, 192.168.0.0/16, 10.0.0.0/8
 org.gradle.jvmargs=-Xmx1536m
 systemProp.https.proxyHost=proxy.iiit.ac.in
 systemProp.http.proxyPort=8080
